--- a/auth-app/package.json
+++ b/auth-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "date-fns": "^4.1.0",
     "install": "^0.13.0",
     "npm": "^11.4.2",
     "react": "^19.1.0",
